<resources>
    <string name="app_name">The Gym Notebook</string>
    <string name="action_settings">Settings</string>
    <string name="addedit_name">Workout Name (Required)</string>
    <string name="addedit_description">Description (Optional)</string>
    <string name="addedit_date">Select Date…</string>
    <string name="addedit_save">Save</string>
    <string name="title_activity_plan_add_edit">Custom Plan</string>
    <string name="title_activity_add_edit">Add/Edit Workout</string>
    <string name="title_activity_about">About Application</string>

    <string name="select_date">Select A Date…</string>
    <string name="no_plans_found">No Plans were found. Please Add a Custom Plan from the Main Menu.</string>
    <string name="no_input_specified">The Exercise Name Cannot be Empty.</string>
    <string name="confirm_clear">Are you sure you want to clear the current data?</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="reps">Reps:</string>
    <string name="sets">Sets:</string>
    <string name="allocate_sets_reps">Allocate Sets/Reps/Weights</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the Add Button (+) in the Toolbar above to Create new Workouts.</string>
    <string name="empty_description"/>
    <string name="deldialog_message">Are you sure you want to delete the workout on : %1$s.</string>
    <string name="deldialog_positive_caption">Delete</string>
    <string name="update_workout_button">Update Workout</string>
    <string name="weights">Weights:</string>
    <string name="about_welcome">Welcome to The Gym Notebook. This app will keep track of all your exercises which you have completed using an intuitive interface.</string>
    <string name="about_github">The code for this application can be found on the github page https://github.com/Thermolink/The-Gym-Notebook</string>
    <string name="about_support_us">It would be greatly appreciated if you could provide feedback for this application. If you wish to support this application, you can contribute directly on the github page!</string>
    <string name="about_contact">If you have any questions, please ask them on the github page, or email them to mike@thermodev.com</string>
    <string name="about_copyright">Copyright © 2017 ThermoDev.</string>
    <string name="description_placeholder">This will include the description</string>
    <string name="workout_date_placeholder">Workout Date</string>
    <string name="version_number">1.0.0</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_sets">Sets:</string>
    <string name="number_placeholder">000</string>
    <string name="exercise_reps">Reps:</string>
    <string name="exercise_weights">Weights:</string>
    <string name="select_workout">Select a Workout...</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="add_workout">Add Workout</string>
    <string name="add_exercise">Add Exercise</string>

</resources>
