<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="?attr/dialogPreferredPadding"
    android:paddingEnd="?attr/dialogPreferredPadding"
    android:paddingLeft="?attr/dialogPreferredPadding"
    android:paddingRight="?attr/dialogPreferredPadding"
    android:paddingStart="?attr/dialogPreferredPadding"
    >

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/version_number"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        tools:text="1.0.0"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/about_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/about_welcome"
        android:textColor="?android:attr/textColorSecondary"/>

    <TextView
        android:id="@+id/about_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:text="@string/about_github"
        android:textColor="?android:attr/textColorSecondary"/>

    <TextView
        android:id="@+id/about_support_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_support_us"
        android:textColor="?android:attr/textColorSecondary"/>

    <TextView
        android:id="@+id/about_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="email"
        android:text="@string/about_contact"
        android:textColor="?android:attr/textColorSecondary"/>

    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|start"
        android:layout_marginTop="16dp"
        android:gravity="bottom"
        android:text="@string/about_copyright"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"/>
</LinearLayout>