<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:orientation="vertical"
                                             tools:context="com.thermodev.thegymnotebook.AddEditPlanFragment"
                                             tools:showIn="@layout/workout_plan_activity_add_edit"
                                             android:id="@+id/content_add_edit"
                                             tools:layout_editor_absoluteY="137dp"
                                             tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/plan_add_edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addedit_name"
        android:inputType="textNoSuggestions"
        android:maxLength="64"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/plan_add_edit_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addedit_description"
        android:inputType="textMultiLine"
        android:maxLength="256"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/plan_add_edit_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>


    <Button
        android:id="@+id/plan_add_edit_exercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add Exercise"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/plan_add_edit_description"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>


    <Button
        android:id="@+id/plan_add_edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:elevation="0dp"
        android:text="@string/addedit_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="91dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="463dp"/>

    <ListView
        android:id="@+id/plan_add_edit_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:longClickable="true"
        app:layout_constraintBottom_toTopOf="@+id/plan_add_edit_save"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_add_edit_exercise"
        app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>